fix modals on mobile

--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -205,12 +205,14 @@ h3, i {
   height: 200px;
   border-radius: 16px;
   background: grey;
-  margin: 8px;
   background-size: cover !important;
   background-position: center !important;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,.1), 0 2px 4px 0 rgba(0,0,0,.08);
   transform-origin: 95% 95%;
   transform-style: preserve-3D; 
+  margin: auto;
+  margin-top: 8px;
+  margin-bottom: 8px;
   i {
     opacity: 0.75;
     position: absolute;
@@ -231,11 +233,27 @@ h3, i {
   overflow: hidden;
 }
 h1 {
+  font-size: 28px;
+  text-align: center;
   a {
     border-radius: 50%;
     margin-left: 10px;
     margin-right: 10px;
     color: black;  
     box-shadow: none !important;
+  }
+}
+.modal-content {
+  background-color: white;
+  overflow-x: hidden;
+        @media only screen and (max-width: 600px) {
+        border-radius: 12px;
+      }
+}
+
+ul {
+  margin: 22px;
+  li {
+    margin: 8px;
   }
 }
